# Transducers.hs

./: readme.md  transducers.cabal
.stack-work/install/x86_64-osx/lts-7.1/8.0.1/flag-cache/: HUnit-1.3.1.2-LggooYwT1UPHSoNYWvAdgk  MonadRandom-0.4.2.3-8TfCm6PGvGYB7omozORhov  QuickCheck-2.8.2-B7cXgOk7OAiKrNRsk2SfuA  StateVar-1.1.0.4-CJpWsiXJdd89SnV9dZtTwc  aeson-0.11.2.1-5ZQWuTFmffALcfpzDCXoOz  aeson-pretty-0.8.2-FONEppYcAcNL67yNmD5AQ1  ansi-terminal-0.6.2.3-448ipfN5j28Ha0AgPiJmdI  ansi-wl-pprint-0.6.7.3-LVnipygDrAR1FEMFhjxcQX  appar-0.1.4-1in4Ewd8JBkAYDZSWXLSe0  asn1-encoding-0.9.4-2Zu5ldLYD571Aw26w0CWF6  asn1-parse-0.9.4-Ai83ACtrOir9VlSOQtWm2F  asn1-types-0.3.2-4Rz223aP8OG6vnHYiLX5Ab  async-2.1.0-J6Pl8k3L4PKGEpjYdgwiIf  attoparsec-0.13.1.0-5Olk1S76r1CDYzFS6V3sZR  auto-update-0.1.4-GAesfFmqoZzBz6e09kRyzb  base-compat-0.9.1-tmPpmtbHbvIDjFWbkjGrR  base-orphans-0.5.4-5IQvrjd7gNP548VkOOyIq6  base64-bytestring-1.0.0.1-In9M41tLtcS9QYt3QpGpNY  bifunctors-5.4.1-8Xk5Wsnk1fr6rBLkW9MO8p  blaze-builder-0.4.0.2-KWDLbdBYSBoALiMW0LHIz1  byteable-0.1.1-15aIBCArSOBEnGxArzrDTM  byteorder-1.0.4-BbL4c17EpZrL9PcZm0xys9  bytestring-builder-0.10.8.1.0-4GkSrJiY0n01lBdCh7onK  cabal-helper-0.7.2.0-9btZ8QaP2mT56PTVu4AAT5  case-insensitive-1.2.0.7-FlqweN7AuKj9EdU2arVEt4  cereal-0.5.3.0-90KodwwwQanJlL7equBhpB  cmdargs-0.10.14-8WOlFWoK1XlCebTZE2edgd  comonad-5-2RMxpSOQ5MCHLHIelJrHD4  conduit-1.2.7-AT81Epeipx6C4wqHn3FXor  conduit-extra-1.1.13.3-Eie7bFfZJv1FGRBWb38y4t  connection-0.2.6-8JjSkaMf1UAKHvqmx5rPLN  contravariant-1.4-KSQE31a7FruKHDlp90hIUT  (+103 more)
src/: Transducers.hs
tests/: tests.hs
(+3 files in other folders)
