name:                transducers
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/transducers#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Transducers
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite tests
  hs-source-dirs:      tests
  main-is:             tests.hs
  type:                exitcode-stdio-1.0
  build-depends:       base >= 4.7 && < 5
                     , transducers
                     , hspec
                     , QuickCheck
  default-language:    Haskell2010
 

source-repository head
  type:     git
  location: https://github.com/githubuser/transducers
